--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ issueTrackerURL="https://www.curseforge.com/minecraft/mc-mods/pandoras-creatures
 modId="pandoras_creatures" #mandatory
 
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.14.4-0.9.2" #mandatory
+version="1.14.4-0.10.0" #mandatory
 
  # A display name for the mod
 displayName="Pandoras Creatures" #mandatory
@@ -29,7 +29,7 @@ displayURL="https://www.curseforge.com/minecraft/mc-mods/pandoras-creatures" #op
 logoFile="logo.png" #optional
 
 # A text field displayed in the mod UI
-credits="\nIgrek, for his amazing textures.\nFlummie2000 for translating and textures.\nGdG_Metiu19 for translating.\n" #optional
+credits="\nIgrek, for his amazing textures.\nFlummie2000 for translating and textures.\nGdG_Metiu19 for translating.\nqsefthuopq for translating.\n" #optional
 
 # A text field displayed in the mod UI
 authors="andrew0030\n" #optional
