Changed spawn system and some bug fixes
- Added new translation (Dutch)
- Changed spawn system to no longer use ATs
- Updated forge to use latest build
- Sorted the AI Goals
- More stuf for the End Troll

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -29,7 +29,7 @@ displayURL="https://www.curseforge.com/minecraft/mc-mods/pandoras-creatures" #op
 logoFile="logo.png" #optional
 
 # A text field displayed in the mod UI
-credits="\nIgrek, for his amazing textures.\nFlummie2000 for translating and textures.\nGdG_Metiu19 for translating.\nqsefthuopq for translating.\nGhanou Craft for translating.\nEl Limbo for translating.\n" #optional
+credits="\nIgrek, for his amazing textures.\nFlummie2000 for translating and textures.\nGdG_Metiu19 for translating.\nqsefthuopq for translating.\nGhanou Craft for translating.\nEl Limbo for translating.\nGun_Man1 for translating.\n" #optional
 
 # A text field displayed in the mod UI
 authors="andrew0030\n" #optional
