--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,3 @@
-public net.minecraft.client.gui.screen.Screen buttons # buttons
-public net.minecraft.client.gui.screen.Screen addButton(Lnet/minecraft/client/gui/widget/Widget;)Lnet/minecraft/client/gui/widget/Widget; # addButton
+public net.minecraft.client.gui.screen.Screen field_230710_m_ # buttons
+public net.minecraft.client.gui.screen.Screen func_230480_a_(Lnet/minecraft/client/gui/widget/Widget;)Lnet/minecraft/client/gui/widget/Widget; # addButton
 public net.minecraft.client.Minecraft field_193996_ah # renderPartialTicksPaused
