A lot of bug fixing
Fixed most bugs, the ones remaining are Structures as those requiere pretty much a recode. In addition to that the CrabEntity spawning is also still a bit broken.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
+public net.minecraft.client.gui.screen.Screen field_230705_e_ # children
 public net.minecraft.client.gui.screen.Screen field_230710_m_ # buttons
 public net.minecraft.client.Minecraft field_193996_ah # renderPartialTicksPaused
