--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,4 @@
 public net.minecraft.client.gui.screen.Screen field_230705_e_ # children
 public net.minecraft.client.gui.screen.Screen field_230710_m_ # buttons
 public net.minecraft.client.Minecraft field_193996_ah # renderPartialTicksPaused
+public net.minecraft.world.gen.feature.structure.Structure field_236385_u_ # structureList
