--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,7 @@ public net.minecraft.client.model.geom.builders.PartDefinition <init>(Ljava/util
 public net.minecraft.client.model.geom.builders.PartDefinition f_171577_ # cubes
 public net.minecraft.client.model.geom.builders.PartDefinition f_171578_ # partPose
 public net.minecraft.client.model.geom.builders.PartDefinition f_171579_ # children
+# Stuff we need to make our own ModelPart
+public-f net.minecraft.client.model.geom.ModelPart
+public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
+public net.minecraft.client.model.geom.ModelPart f_104213_ # children
