--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,3 +7,5 @@ public net.minecraft.client.model.geom.builders.PartDefinition f_171579_ # child
 public-f net.minecraft.client.model.geom.ModelPart
 public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
 public net.minecraft.client.model.geom.ModelPart f_104213_ # children
+# Stuff we need to make our own KeyframeAnimations
+public net.minecraft.client.animation.KeyframeAnimations m_232316_(Lnet/minecraft/client/animation/AnimationDefinition;J)F # getElapsedSeconds
