--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -9,3 +9,9 @@ public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
 public net.minecraft.client.model.geom.ModelPart f_104213_ # children
 # Stuff we need to make our own KeyframeAnimations
 public net.minecraft.client.animation.KeyframeAnimations m_232316_(Lnet/minecraft/client/animation/AnimationDefinition;J)F # getElapsedSeconds
+# Stuff we need to make our own HierarchicalModel
+public net.minecraft.client.model.HierarchicalModel f_233379_ # ANIMATION_VECTOR_CACHE
+# Stuff we need to make our own Animatition Builder
+public net.minecraft.client.animation.AnimationDefinition$Builder <init>(F)V # Builder
+public net.minecraft.client.animation.AnimationDefinition$Builder f_232269_ # length
+public net.minecraft.client.animation.AnimationDefinition$Builder f_232270_ # animationByBone
