Sanity really just is a social construct

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -11,7 +11,6 @@ public net.minecraft.client.model.geom.ModelPart f_104213_ # children
 public net.minecraft.client.animation.KeyframeAnimations m_232316_(Lnet/minecraft/client/animation/AnimationDefinition;J)F # getElapsedSeconds
 # Stuff we need to make our own HierarchicalModel
 public net.minecraft.client.model.HierarchicalModel f_233379_ # ANIMATION_VECTOR_CACHE
-# Stuff we need to make our own Animatition Builder
-public net.minecraft.client.animation.AnimationDefinition$Builder <init>(F)V # Builder
-public net.minecraft.client.animation.AnimationDefinition$Builder f_232269_ # length
-public net.minecraft.client.animation.AnimationDefinition$Builder f_232270_ # animationByBone
+
+public net.minecraft.world.entity.AnimationState f_216970_ # lastTime
+public net.minecraft.world.entity.AnimationState f_216971_ # accumulatedTime
