Parsing expressions and some small changes
- MolangKeyframe's now use the value they get from the parsed expression String
- Suppressed some pointless Warnings
- Made the easing arg more generic
- Added class to handle value retrieval for MolangKeyframe Strings, that caches the value if its simple and returns it without any further processing, to save performance

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
     id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 version = '1.19.3-3.0.0'
@@ -57,12 +58,19 @@ mixin {
 // sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
+    mavenCentral()
+}
 
+configurations {
+    shade
+    implementation.extendsFrom shade
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.19.3-44.0.41'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+    minecraftLibrary 'net.objecthunter:exp4j:0.4.8'
+    shade 'net.objecthunter:exp4j:0.4.8'
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
@@ -80,6 +88,17 @@ jar {
     }
 }
 
+shadowJar {
+    archiveClassifier = ''
+    configurations = [project.configurations.shade]
+    relocate 'net.objecthunter', "andrews.shadowed.objecthunter"
+    finalizedBy 'reobfShadowJar'
+}
+
+assemble.dependsOn shadowJar
+reobf {
+    shadowJar {}
+}
 jar.finalizedBy('reobfJar')
 
 publishing {
