Atomic Reference to prevent Server from bricking
- Replaced Animation in AnimationState with AtomicReference to prevent server from loading Client stuff

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,10 +7,6 @@ public net.minecraft.client.model.geom.builders.PartDefinition f_171579_ # child
 public-f net.minecraft.client.model.geom.ModelPart
 public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
 public net.minecraft.client.model.geom.ModelPart f_104213_ # children
-# Stuff we need to make our own KeyframeAnimations
-public net.minecraft.client.animation.KeyframeAnimations m_232316_(Lnet/minecraft/client/animation/AnimationDefinition;J)F # getElapsedSeconds
-# Stuff we need to make our own HierarchicalModel
-public net.minecraft.client.model.HierarchicalModel f_233379_ # ANIMATION_VECTOR_CACHE
-
+# Stuff we need to make our own AnimationState
 public net.minecraft.world.entity.AnimationState f_216970_ # lastTime
 public net.minecraft.world.entity.AnimationState f_216971_ # accumulatedTime
